--- a/src/components/products/Product.scss
+++ b/src/components/products/Product.scss
@@ -9,6 +9,7 @@
     padding: 30px;
     background: #ffffff;
     box-shadow: 0px 2px 6px rgba(69, 73, 91, 0.08);
+    height: max-content;
 
     h3 {
       font-weight: normal;
