--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -615,7 +615,7 @@ nav {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     color: #A5A8BB;
