--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -713,7 +713,7 @@ nav .down li {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
