--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -99,6 +99,10 @@ $main-color: #36e3d9;
     }
   }
 
+  p{
+    color:red;
+  }
+
   .terms {
     display: flex;
     justify-content: space-between;
