--- a/src/components/layout/Cart.css
+++ b/src/components/layout/Cart.css
@@ -19,11 +19,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0 0 50px 190px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 0 50px 0;
 }
 
 .cart-page .cart-list .row-2 h4 {
-  padding: 0 95px 0 0;
+  text-align: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .cart-page .cart-list .row {
@@ -37,13 +43,17 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 
-.cart-page .cart-list .row img {
+.cart-page .cart-list .row .img {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  display: block;
+}
+
+.cart-page .cart-list .row .img img {
+  width: 100%;
 }
 
 .cart-page .cart-list .row .MuiFormControl-root {
@@ -67,11 +77,17 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding: 0 50px;
   font-size: 18px;
   line-height: 20px;
   color: #000000;
   font-weight: normal;
+}
+
+.cart-page .cart-list .row svg {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  cursor: pointer;
 }
 
 .cart-page hr {
@@ -92,7 +108,7 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  padding: 200px 0 0 0;
+  padding: 150px 0 0 0;
 }
 
 .cart-page .check-out input {
@@ -106,8 +122,8 @@
   margin: 0 0 30px 0;
 }
 
-.cart-page .check-out input[type=submit] {
-  background: #36E3D9;
+.cart-page .check-out input[type="submit"] {
+  background: #36e3d9;
   color: #fff;
 }
 
@@ -141,5 +157,32 @@
 
 .cart-page .check-out .row .box:nth-child(1) {
   margin: 0 15px 0 0;
+}
+
+.message {
+  padding: 200px 100px;
+  text-align: center;
+}
+
+.message img {
+  display: block;
+  max-width: 120px;
+  margin: 0 auto;
+}
+
+.message h1 {
+  padding: 40px 0;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 27px;
+  color: #464855;
+}
+
+.message h3 {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #898ea2;
 }
 /*# sourceMappingURL=Cart.css.map */
