--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -20,6 +20,12 @@
   height: max-content;
 }
 
+@media (max-width: 500px) {
+  .search-page .filter-list {
+    display: none;
+  }
+}
+
 .search-page .filter-list h3 {
   font-weight: normal;
   font-size: 16px;
@@ -84,9 +90,15 @@
   display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   padding: 0 30px;
+}
+
+@media (max-width: 500px) {
+  .search-page .products-list {
+    padding: 0;
+  }
 }
 
 .search-page .products-list .box {
@@ -143,6 +155,15 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 50px;
+}
+
+@media (max-width: 500px) {
+  .product {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 
 .product .product-detail {
