--- a/src/components/products/Product.scss
+++ b/src/components/products/Product.scss
@@ -1,3 +1,9 @@
+@mixin phone {
+  @media (max-width: 500px) {
+    @content;
+  }
+}
+
 .search-page {
   display: flex;
   padding: 30px;
@@ -10,6 +16,10 @@
     background: #ffffff;
     box-shadow: 0px 2px 6px rgba(69, 73, 91, 0.08);
     height: max-content;
+
+    @include phone{
+      display:none;
+    }
 
     h3 {
       font-weight: normal;
@@ -64,8 +74,12 @@
     flex: 2;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 0 30px;
+
+    @include phone{
+      padding: 0;
+    }
 
     .box {
       background: #ffffff;
@@ -120,6 +134,10 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 50px;
+
+  @include phone{
+    flex-direction: column-reverse;
+  }
 
   .product-detail {
     flex: 1;
