--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -107,10 +107,23 @@
           box-shadow: 0px 2px 6px rgba(69, 73, 91, 0.08);
   padding: 30px;
   max-width: 400px;
+  min-height: 485px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .search-page .products-list .box h5 {
-  display: inline-block;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
   font-size: 12px;
   line-height: 15px;
   color: #898ea2;
@@ -121,10 +134,12 @@
 .search-page .products-list .box .product-image {
   width: 100%;
   padding: 20px;
+  max-height: 200px;
 }
 
 .search-page .products-list .box .product-image img {
   width: 100%;
+  height: 100%;
 }
 
 .search-page .products-list .box h2 {
