--- a/src/components/products/Product.scss
+++ b/src/components/products/Product.scss
@@ -86,9 +86,13 @@
       box-shadow: 0px 2px 6px rgba(69, 73, 91, 0.08);
       padding: 30px;
       max-width: 400px;
+      min-height: 485px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 
       h5 {
-        display: inline-block;
+        max-width: max-content;
         font-size: 12px;
         line-height: 15px;
         color: #898ea2;
@@ -99,9 +103,12 @@
       .product-image {
         width: 100%;
         padding: 20px;
+        max-height: 200px;
+          
 
         img {
           width: 100%;
+          height: 100%;
         }
       }
 
