--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -528,6 +528,17 @@ nav .down li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-width: 100%;
+}
+
+.section-2 .row a {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .section-2 .row .box {
@@ -542,7 +553,7 @@ nav .down li {
   border: 1px solid #edeef4;
   padding: 20px;
   background: #fff;
-  min-height: 200px;
+  min-height: 210px;
 }
 
 @media (max-width: 500px) {
@@ -627,6 +638,10 @@ nav .down li {
 
 .section-2 .row .box .middle .color-4 div {
   background: #f50138;
+}
+
+.section-2 .row .box .middle .color-5 div {
+  background: #000;
 }
 
 .section-2 .row .box .right {
